--- a/aula-08/index.html
+++ b/aula-08/index.html
@@ -8,15 +8,15 @@
 <body>
     <div id="container">
           <h1>Manipulação do DOM</h1>
-          <ul class="list">
+          <ul id="list">
             <li>Item 1</li>
             <li>Item 2</li>
             <li>Item 3</li>
           </ul>
     </div>
 
-    <button id="addBtn">Adicionar Item</button>
-    <button id="removeBtn">Remover Item</button>
+    <button id="addBtn" onclick="adicionarItem()">Adicionar Item</button>
+    <button id="removeBtn" onclick="removerItem()">Remover Item</button>
 
 </body>
 <script src="aula08.js"></script>
