--- a/aula-11/index.html
+++ b/aula-11/index.html
@@ -13,7 +13,7 @@
     <button onclick="tornarCirculo()">Circulo</button>
     <button onclick="tornarQuadrado()">Quadrado</button>
     <button onclick="altenarFormato()">Altenar Formato</button>
-    <button>Verificar Classe</button>
+    <button onclick="verificarClasse()">Verificar Classe</button>
     
 </body>
 <script src="script.js"></script>
