--- a/aula-12/index.html
+++ b/aula-12/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interações Modernas</title>
+    <title>MODO DARK E LIGHT</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/5729e0ff2e.js" crossorigin="anonymous"></script>
 </head>
@@ -15,12 +15,10 @@
     <header>
         <div>
             <h1>Mini Site Interativo</h1>
-
         </div>
 
         <div>
             <button id="btnTema"><i class="fa-solid fa-moon"></i></button>
-
         </div>
     </header>
 
