--- a/aula-12/index.html
+++ b/aula-12/index.html
@@ -22,11 +22,13 @@
         </div>
 
         <div class="toggle-btn">
-            <button id="btnTema"><i class="fa-solid fa-moon"></i></button>
+            <button id="btnTema">
+                <i class="fa-solid fa-moon"></i>
+            </button>
         </div>
     </header>
 
-
+<!-- SESSÃO 0 – Card Interativo -->
     <section class="section-00">
         <button>SAIBA MAIS</button>
     </section>
@@ -98,7 +100,7 @@ if (idade >= 18) {
     </section>
 
 
-    <!-- SESSÃO 5 – Conteúdo lado a lado -->
+    <!-- SESSÃO 4 – Conteúdo lado a lado -->
     <section class="sessao flex-sessao">
 
 
